Remove Joda time dependency
Update to require Java 11
Update dependency versions
Update plugin versions
Set version to 0.4.0-SNAPSHOT